--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/amqp": "^0.2.4",
     "@types/lodash": "^4.14.120",
+    "@types/moment": "^2.13.0",
     "@types/node": "^10.12.18",
     "jest": "^23.6.0",
     "nodemon": "^1.18.7",
@@ -37,6 +38,7 @@
   "dependencies": {
     "amqp": "^0.2.7",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "smart-factory": "^1.0.12"
   }
 }
