--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/JayJayDee/Chatpot-Room-Server#readme",
   "devDependencies": {
-    "@types/amqp": "^0.2.4",
+    "@types/amqplib": "^0.5.9",
     "@types/lodash": "^4.14.120",
     "@types/moment": "^2.13.0",
     "@types/node": "^10.12.18",
@@ -36,7 +36,7 @@
     "typescript": "^3.2.1"
   },
   "dependencies": {
-    "amqp": "^0.2.7",
+    "amqplib": "^0.5.3",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "smart-factory": "^1.0.12"
