--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "amqplib": "^0.5.3",
     "bsonfy": "^1.0.2",
+    "firebase-admin": "^6.5.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "smart-factory": "^1.0.12"
