--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/JayJayDee/Chatpot-Room-Server#readme",
   "devDependencies": {
     "@types/amqplib": "^0.5.9",
+    "@types/jest": "^23.3.13",
     "@types/lodash": "^4.14.120",
     "@types/moment": "^2.13.0",
     "@types/node": "^10.12.18",
